syntax = "proto3";

option go_package = "github.com/niklek/api-grpc;api_grpc";

package places;

import "google/protobuf/timestamp.proto";

// The service definition
service Places {
  rpc GetById (PlaceIdRequest) returns (PlaceResponse) {}
}

message Place {
  int64 id = 1;
  string name = 2;
  string location = 3;
  
  enum PlaceType {
    BAR = 0;
    CAFE = 1;
    RESTAURANT = 2;
    SHOP = 3;
    STREET = 4;
    SQUARE = 5;
    BUILDING = 6;
    LAKE = 7;
    RIVER = 8;
    MOUNTAIN = 9;
    STATION = 10;
    OUTDOOR = 11;
  }

  PlaceType type = 4;

  string comment = 5;

  google.protobuf.Timestamp lastUpdated = 6;
}

// The request message
message PlaceIdRequest {
  int64 id = 1;
}

// The response message
message PlaceResponse {
  Place place = 1;
}

message PlacesResponse {
  repeated Place places = 1;
}